# uk-hardware-store-mcp

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  mcp.json  pyproject.toml
.agents/rules/: crawler.md  testing.md
app/: config.py  logger.py  main.py  mcp_server.py  stdio.py
app/crawlers/: __init__.py  browser.py  http_client.py  utils.py
app/crawlers/diy_dot_com_crawler/: __init__.py  diy_dot_com_crawler.py
app/crawlers/homebase_crawler/: __init__.py  homebase_crawler.py
app/crawlers/screwfix_crawler/: __init__.py  screwfix_crawler.py
app/crawlers/the_range_crawler/: __init__.py  the_range_crawler.py
app/crawlers/toolstation_crawler/: __init__.py  toolstation_crawler.py
scripts/: deploy.sh  setup.sh  start.sh  test.sh
scripts/docker/: setup.sh  start.sh
src/app/: main.py  mcp_server.py  stdio.py
src/app/crawlers/base/: crawlers.py
tests/: __init__.py  conftest.py  crawler.py  test_browser.py  test_diy_dot_com_crawler.py  test_homebase_crawler.py  test_http_client.py  test_mcp_product_search.py  test_mcp_provider_integration.py  test_screwfix_crawler.py  test_the_range_crawler.py  test_toolstation_crawler.py  test_wickes_crawler.py
tests/mock_server/: __init__.py  product_detail_diy_dot_com.html  product_detail_homebase.html  product_detail_screwfix.html  product_detail_the_range.html  product_detail_toolstation.html  product_detail_wickes.html  product_search_diy_dot_com.html  product_search_homebase.html  product_search_screwfix.html  product_search_the_range.html  product_search_toolstation.json  product_search_wickes.html
(+6 files in other folders)
