[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
  "beautifulsoup4==4.14.3",
  "crawlee[parsel,httpx]==1.6.0",
  "fastapi[standard]==0.135.2",
  "mcp[cli]==1.26.0"
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "ruff==0.4.10",
]

[tool.pytest]
addopts = ["--capture=no"]

[tool.uv]
add-bounds = "exact"
