[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
  "browserforge==1.2.4",
  "curl-cffi==0.14.0",
  "fastapi[standard]==0.135.2",
  "mcp[cli]==1.26.0",
  "parsel==1.11.0",
  "patchright==1.59.1",
  "pydantic==2.11.5",
  "rich==14.0.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-httpserver==1.1.5",
  "ruff==0.15.8",
]

[tool.pytest]
addopts = ["--capture=no"]

[tool.uv]
add-bounds = "exact"
